--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="desc">
                     I am an Information Technology undergrad student at Pune Institute of Computer Technology. I am a tech enthusiast and a decent problem solver.
                     I like to solve real-world problems by giving software solutions for such challenges.<br><br> I have made a website for aiding healthcare professionals, as well as medical patients, in keeping their respective medical information up-to-date, titled Medi-Vault.
-                    <br><br> I have also developed an e-commerce website, titled IndiCraft, for a platform that sells tech products as well as clothing items.<br><br> I am currently making a text-to-sign language app for the <b>Indian Government</b>. I also am in the process of designing a game using the Unreal Game Engine 5.1.<br>
+                    <br><br> I have also developed an e-commerce website, titled IndiCraft, for a platform that sells tech products as well as clothing items.<br><br> I am currently making a text-to-sign language app for the <b>Maharashtra Government</b>. I also am in the process of designing a game using the Unreal Game Engine 5.1.<br>
                 </div>
             </div>
         </section>
